Go to http://github.com/plack/Plack/issues for the roadmap and known issues.

1.0014 Mon Dec  3 10:27:43 PST 2012
    [BUG FIXES]
        - Fixed Hash order in tests for perl 5.17 (doy)
        - Fixed StackTrace tests to run with Devel::StackTrace

    [IMPROVEMENTS]
        - Plack::Middleware::AccessLog can now log the worker pid and server
          port (ether)

1.0013  Wed Nov 14 19:46:49 PST 2012
    [BUG FIXES]
        - Make sure psgi.input is seeked even when the input is buffered (Getty, leedo)
        - Delete invalid (empty) CONTENT_LENGTH and CONTENT_TYPE in FCGI (Getty, leedo)

1.0012  Wed Nov 14 12:00:17 PST 2012
    [IMPROVEMENTS]
        - Make conditional middleware work with initialization without an app (doy)
        - Added force option to BufferedStreaming 

1.0011  Sun Nov 11 11:05:30 PST 2012
    [BUG FIXES]
        - Fix bad Content-Length that could be caused with mod_perl (avar)
        - Allow an empty PATH_INFO in Lint per PSGI spec

1.0010  Fri Nov  2 13:30:50 PDT 2012
    [IMPROVEMENTS]
        - Added vim .swp files to the default ignore list in Restarter
        - Check if PATH_INFO begins with / in Lint

1.0009  Tue Oct 23 00:57:16 PDT 2012
    [BUG FIXES]
        - Correct fix to address drive letters for Win32

1.0008  Mon Oct 22 18:52:29 PDT 2012
    [BUG FIXES]
        - Allow drive letters for absolute paths for plackup and load_psgi #343

1.0007  Sat Oct 20 23:20:20 PDT 2012
    [IMPROVEMENTS]
        - Fix test failures with HTTP::Message 6.06. #345
        - relaxed plackup -R ignore files and directoris. #260

1.0006  Thu Oct 18 16:06:15 PDT 2012
    [INCOMPATIBLE CHANGES]
        - plackup foo.psgi will not search the file in @INC anymore before the current directory
          See https://github.com/plack/Plack/pull/343 for details (miyagawa)

    [NEW FEATURES]
        - plackup --path /foo will mount the application under /path (mattn)

    [BUG FIXES]
        - AccessLog: Fix the timezon offset for certain timezones